--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  justify-content:  center;
+  min-width: 100vh;
   min-height: 100vh;
 }
 
